--- a/The Encounter/ProjectSettings/Packages/com.unity.connect.share/Settings.json
+++ b/The Encounter/ProjectSettings/Packages/com.unity.connect.share/Settings.json
@@ -21,7 +21,7 @@
             {
                 "type": "System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "buildOutputDirList",
-                "value": "{\"m_Value\":\"D:/UCF Classes/Spring 2023/Game Production (4715)/Starter Individual Project/TheEncounter/The Encounter/WebGL Builds;;;;;;;;;\"}"
+                "value": "{\"m_Value\":\"D:/UCF Classes/Spring 2023/Game Production (4715)/Starter Individual Project/TheEncounter/The Encounter/WebGL Builds/TemplateData;D:/UCF Classes/Spring 2023/Game Production (4715)/Starter Individual Project/TheEncounter/The Encounter/WebGL Builds;;;;;;;;\"}"
             }
         ]
     }
